# MietCheck

./: .dockerignore  .gitattributes  .gitignore  CITATION.cff  Dockerfile  KONTEXT_UEBERGABE.md  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-mlops.txt  requirements.txt  start.bat  start.command
.streamlit/: config.toml
data/: cities_de.json  immo_clean.parquet
deliverables/: MietCheck_Handout.docx  MietCheck_Praesentation.pptx  README.md
docs/: DATA_CARD.md  DEMO_RUNBOOK.md  MODEL_CARD.md  NOTEBOOK_GUIDE.md  PRESENTATION_SCRIPT.md  PRODUCT_SPEC.md  PROJECT_CHARTER.md  QUA3CK_MLOPS_COMPLIANCE.md  RELEASE_STATUS.md  REQUIREMENTS_CHECKLIST.md  RISK_AND_ETHICS.md
models/: meta.json  mietcheck_model.joblib  model_manifest.json  zensus_hgb.joblib  zensus_hgb_meta.json
notebooks/: 00_gesamtueberblick_qua3ck.ipynb  01_qualitaetspruefung.ipynb  01_question.ipynb  02_understanding_the_data.ipynb  03_algorithmenauswahl.ipynb  04_modellentwicklung.ipynb  05_kreuzvalidierung.ipynb  06_wissensextraktion.ipynb  A-Phase.ipynb  C-Phase.ipynb  K-Phase.md  Q-Phase.ipynb  U-Phase.ipynb
reports/: algorithm_benchmark.json  dataset_build_report.json  feature_ablation.json  final_model_evaluation.json  hgb_tuning.json  metrics.json  mlflow_publish.json  notebook_execution.json  pilot_spatial_metrics.json  svm_kernel_benchmark.json
scripts/: __init__.py  algorithm_benchmark.py  build_dataset.py  build_greix.py  build_region_profiles.py  download_data.py  execute_notebooks.py  feature_ablation.py  generate_notebooks.py  (+6 more)
(+42 files in other folders)
